--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+{{ content_for_header }}
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{{ page_title }}</title>
@@ -72,6 +73,7 @@
         {% section 'contact' %}
     </main>
     {% include 'footer' %}
+    {{ content_for_layout }}
     <script src="{{ 'lenis.js' | asset_url }}"></script>
     <script src="{{ 'partical.js' | asset_url }}"></script>
     <script src="{{ 'scrolltrigger.min.js' | asset_url }}"></script>
