Added Blocks Folder, It contains 'contact-buttons.liquid'.

--- a/blocks/contact-buttons.liquid
+++ b/blocks/contact-buttons.liquid
@@ -38,7 +38,7 @@
     "blocks": [
       {
         "type": "skill",
-        "name": "Skill Icon",
+        "name": "test",
         "settings": [
           {
             "type": "image_picker",
