Added Blocks Folder, It contains 'contact-buttons.liquid'.

--- a/blocks/contact-buttons.liquid
+++ b/blocks/contact-buttons.liquid
@@ -18,7 +18,7 @@
   "blocks": [
     {
       "type": "skill",
-      "name": "Skill", <!-- Changed from "test" to "Skill" -->
+      "name": "Skill",
       "settings": [
         {
           "type": "image_picker",
