Added Blocks Folder, It contains 'contact-buttons.liquid'.

--- a/blocks/contact-buttons.liquid
+++ b/blocks/contact-buttons.liquid
@@ -21,7 +21,7 @@
 {% schema %}
 
   {
-    "name": "Skills Section",
+    "name": "d Section",
     "settings": [
       {
         "type": "text",
@@ -37,8 +37,8 @@
     ],
     "blocks": [
       {
-        "type": "skill",
-        "name": "test",
+        "type": "skild",
+        "name": "skild",
         "settings": [
           {
             "type": "image_picker",
@@ -63,7 +63,7 @@
     ],
     "presets": [
       {
-        "name": "Skills Section",
+        "name": "Skild Section",
         "category": "Section"
       }
     ]
